 * Support VP9 and WMV3 decoding using OMX and performance improvements
 * New MPEG-1 & 2 audio layer I, II, III + MPEG 2.5 decoder based on libmpg123
 * New BPG decoder based on libbpg
 * Fixed uncompressed DVD-Audio (AOB) LPCM decoding
 * Rewrite WPL playlists and add ZPL playlists support (Zune)
 * Support TDSC, Canopus HQX
 * Support HEVC hardware decoding on Windows, using DxVA2

Demuxers:
 * Support HD-DVD .evo (H.264, VC-1, MPEG-2, PCM, AC-3, E-AC3, MLP, DTS)
 * Support Opus in MPEG Transport Stream
 * Support Daala in Ogg
 * Important rework of the MP4 demuxer
 * Support EIA-608 subtitles in MP4/mov
 * Support WMV and WMAV in MP4/mov, aka Flip4Mac files
 * Support bitmap audio channel reordering in MP4/mov
 * Support AlbumArtist and DiscNumber metadata
 * Fixed program selection with recorded TS (TopField, DreamBox and others)
 * Fixed TS playback with PAT/PMT less recordings
 * Support for lame's replaygain extension in mpeg files
 * Fixes for DTS detection in WAV and MKV files
 * Basic support for MPEG4-SL in TS and T-DMB
 * Support for Creative ADPCM/alaw/ulaw/S16L in VOC files
 * Support for Creative ADPCM in AVI

Stream filter:
 * Added ARIB STD-B25 TS streams decoder

Audio output:
 * Complete rewrite of the AudioTrack Android module. This is now the default.
   It now supports HDMI/SPDIF passthrough for AC3, 5.1/7.1 and float output.

Video ouput:
 * Linux/BSD default video output is now OpenGL, instead of Xvideo
 * Wayland shell surface window provider
 * Wayland shared memory video output
 * Large rework of the Android video outputs: there is now Surface (2.1, 2.2)
   NativeWindow (2.3+, supports hw rotation, subpicture blending, opaque)
 * Support rotation in Android NativeWindow output and hardware decoders
 * Renamed the Direct3D output module to Direct3D9
 * Added Direct3D11 video mode supporting both Windows desktop and WinRT modes.

Video filter:
 * Hardware deinterlacing on the rPI, using MMAL
 * New video filter to convert between fps rates