@@ -43,7 +43,7 @@ vlc_fourcc_t vlc_va_GetChroma(enum PixelFormat hwfmt, enum PixelFormat swfmt)
         case AV_PIX_FMT_DXVA2_VLD:
             return VLC_CODEC_D3D9_OPAQUE;
         case AV_PIX_FMT_D3D11VA_VLD:
-            return VLC_CODEC_NV12; /* TODO FIXME */
+            return VLC_CODEC_NV12; /* TODO OPAQUE */
 #if (LIBAVUTIL_VERSION_INT >= AV_VERSION_INT(53, 14, 0))
         case AV_PIX_FMT_VDA_VLD:
             return VLC_CODEC_UYVY;
